--- a/ux/index.html
+++ b/ux/index.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Wiki.js</title>
     <!--preload-links-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300..900&display=swap" rel="stylesheet">
+    <link href="/_assets/fonts/roboto/roboto.css" rel="stylesheet" />
     <style type="text/css">
       @keyframes initspinner {
         to { transform: rotate(360deg); }
@@ -69,7 +67,7 @@
       </style>
     </noscript>
   </head>
-  <body>
+  <body class="wiki-root">
     <div class="init-loading"></div>
     <div id="app"><!-- quasar:entry-point --></div>
   </body>
