refactor: use core vite instead of quasar cli

--- a/ux/index.html
+++ b/ux/index.html
@@ -69,6 +69,7 @@
   </head>
   <body class="wiki-root">
     <div class="init-loading"></div>
-    <div id="app"><!-- quasar:entry-point --></div>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
