--- a/others/code-injection.html
+++ b/others/code-injection.html
@@ -9,32 +9,25 @@
           (match, symbol, keyword) => {
             const trimmedMatch = match.trim(); // Remove leading space for correct replacement
             if (symbol === '#') {
-              return `&nbsp<a target="_blank" href="/t/${keyword}" class="tag tag-hashtag">${trimmedMatch}</a>`;
+              return `&nbsp<a href="/t/${keyword}" class="tag tag-hashtag">${trimmedMatch}</a>`;
             } else if (symbol === '@') {
               // Replace dash with space for person names
               const displayName = keyword.replace(/-/g, ' ');
-              return `&nbsp<a target="_blank" href="/คน/${keyword}" class="tag tag-mention">${displayName}</a>`;
+              return `&nbsp<a href="/คน/${keyword}" class="tag tag-mention">${displayName}</a>`;
             } else if (symbol === '!') {
               // Split location parts
               const parts = keyword.split('/');
-              if (parts.length === 3) {
-                if (parts[2] === 'กรุงเทพมหานคร') {
-                  // Bangkok format: reverse order
-                  return `&nbsp<a target="_blank" href="/สถานที่/${parts[2]}/${parts[1]}/${parts[0]}" class="tag tag-location">${parts[0]}</a>`;
-                } else if (parts[0].startsWith('ต.') && parts[1].startsWith('อ.') && parts[2].startsWith('จ.')) {
-                  // Format: ต.xxx/อ.xxx/จ.xxx
-                  const district = parts[0].substring(2); // Remove ต.
-                  const amphoe = parts[1].substring(2); // Remove อ.
-                  const province = parts[2].substring(2); // Remove จ.
-                  return `&nbsp<a target="_blank" href="/สถานที่/${province}/อำเภอ${amphoe}/ตำบล${district}" class="tag tag-location">${district}</a>`;
-                } else {
-                  // Other provinces: keep original order
-                  return `&nbsp<a target="_blank" href="/สถานที่/${parts[2]}/${parts[1]}/${parts[0]}" class="tag tag-location">${parts[0]}</a>`;
-                }
-              }
-              return `&nbsp<a target="_blank" href="/สถานที่/${keyword}" class="tag tag-location">${keyword}</a>`;
+              // สร้าง path จากการเรียงลำดับจากมากไปน้อย
+              const locationPath = parts.length > 1
+                ? '/สถานที่/' + parts.reverse().join('/')
+                : '/สถานที่/' + parts[0];
+
+              // แสดงชื่อสถานที่ล่าสุด (ส่วนสุดท้าย)
+              const displayName = parts[parts.length - 1];
+
+              return `&nbsp<a href="${locationPath}" class="tag tag-location">${displayName}</a>`;
             } else if (symbol === '$') {
-              return `&nbsp<a target="_blank" href="/เหตุการณ์/${keyword}" class="tag tag-event">${keyword}</a>`;
+              return `&nbsp<a href="/เหตุการณ์/${keyword}" class="tag tag-event">${keyword}</a>`;
             }
             return trimmedMatch;
           }
